project: improved documentations, fixed tests